# jbeedb

./: CMakeLists.txt  Makefile  README.md  Record.h  SharedKeys.h  Store.cpp  Store.h  Variant.cpp  main.cpp
src/: Record.cpp  Variant.h
test/: StoreTest.cpp
